reached a state where the GPU version of Monte-Carlo area estimation properly compiles
This involved solving several bugs in the GPU kernel code. There are more bugs. In
particular direct host level to warp level transition code has variable naming issues.
We have to solve all these bugs in the future.

Also, we need to verify if the added sample code works correctly.

--- a/compilers/hybrid-backend/MakeFile-Executable
+++ b/compilers/hybrid-backend/MakeFile-Executable
@@ -62,7 +62,7 @@ RFLAG = -pthread
 LIBS = -lc -lm -pthread -lcudart
 
 # C++ library links for external code blocks
-EXTERN_LIBS = $(shell grep 'C++ =\|C =' build/$(BUILD_SUBDIR)/external_links.txt  | cut -f2 -d "=" | tr '\n' ' ')
+EXTERN_LIBS = $(shell grep 'C++ =\|C = \|CUDA =' build/$(BUILD_SUBDIR)/external_links.txt  | cut -f2 -d "=" | tr '\n' ' ')
 
 # Rules for various parts of the target
 
